# ikaros

./: .gitignore  CMakeLists.txt
Scripts/CMake/: FindSL-Lidar.cmake
Source/UserModules/: CMakeLists.txt
Source/UserModules/EpiMove/: CMakeLists.txt
Source/UserModules/EpiMove/Examples/: Lidar_route_planner.ikg  SR_Ensemble_test.ikg  Sensing_navigation.ikg  TransitionMatrix_test.ikg
Source/UserModules/EpiMove/FakeLidar/: CMakeLists.txt  FakeLidar.cc  FakeLidar.h  FakeLidar.ikc
Source/UserModules/EpiMove/FakeLidar/Examples/: LidarSensor_test.ikg
Source/UserModules/EpiMove/GridMatrix/: CMakeLists.txt  GridMatrix.cc  GridMatrix.h  GridMatrix.ikc
Source/UserModules/EpiMove/LidarSensor/: CMakeLists.txt  LidarSensor.cc  LidarSensor.h  LidarSensor.ikc
Source/UserModules/EpiMove/ODriveController/: CMakeLists.txt  ODriveController.cc  ODriveController.h  ODriveController.ikc  ODriveEnums.h  ODriveParameters.h  ODriveSerial.cc  ODriveSerial.h
Source/UserModules/EpiMove/ODriveController/Examples/: ODriveController_test.ikg
Source/UserModules/EpiMove/ODriveController/odrive/: odrive.cpp  odrive.h
Source/UserModules/EpiMove/OccupancyMap/: CMakeLists.txt  Models.cc  OccupancyMap.cc  OccupancyMap.h  OccupancyMap.ikc
Source/UserModules/EpiMove/PathIntegrator/: PathIntegrator.cc  PathIntegrator.h  PathIntegrator.ikc
Source/UserModules/EpiMove/PathIntegrator/Examples/: TargetArrayControls_test.ikg
Source/UserModules/EpiMove/RaoBlackwellSLAM/: CMakeLists.txt  Particle.cc  RaoBlackwellSLAM.cc  RaoBlackwellSLAM.h  RaoBlackwellSLAM.ikc
Source/UserModules/EpiMove/RoutePlanner/: CMakeLists.txt  RoutePlanner.cc  RoutePlanner.h  RoutePlanner.ikc
Source/UserModules/EpiMove/SRGradient/: CMakeLists.txt  SRGradient.cc  SRGradient.h  SRGradient.ikc
Source/UserModules/EpiMove/SRReduction/: CMakeLists.txt  SRReduction.cc  SRReduction.h  SRReduction.ikc
Source/UserModules/EpiMove/SuccessorRepresentation/: CMakeLists.txt  SuccessorRepresentation.cc  SuccessorRepresentation.h  SuccessorRepresentation.ikc
Source/UserModules/EpiMove/TargetArrayControls/: TargetArrayControls.cc  TargetArrayControls.h  TargetArrayControls.ikc
Source/UserModules/EpiMove/TransitionMatrix/: TransitionMatrix.cc  TransitionMatrix.h  TransitionMatrix.ikc
Source/UserModules/LidarSensor/: LidarSensor.cc  LidarSensor.h  LidarSensor.ikc
Source/UserModules/LidarSensor/Examples/: LidarSensor_test.ikg
Source/UserModules/ODriveController/: CMakeLists.txt  ODriveController.cc  ODriveController.h  ODriveController.ikc
Source/UserModules/ODriveController/Examples/: ODriveController_test.ikg
Source/UserModules/OccupancyMap/: OccupancyMap.cc  OccupancyMap.h  OccupancyMap.ikc
Source/UserModules/PathIntegrator/: CMakeLists.txt  PathIntegrator.cc  PathIntegrator.h  PathIntegrator.ikc
Source/UserModules/TargetArrayControls/: CMakeLists.txt  TargetArrayControls.cc  TargetArrayControls.h  TargetArrayControls.ikc
Source/UserModules/TargetArrayControls/Examples/: TargetArrayControls_test.ikg
Source/UserModules/TransitionMatrix/: CMakeLists.txt  TransitionMatrix.cc  TransitionMatrix.h  TransitionMatrix.ikc
(+5 files in other folders)
